web/book/tests/documentation/snapshots/documentation__book__language-features__strings__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from my_table\nselect x = \"hello world\"\n"
---
SELECT
  'hello world' AS x
FROM
  my_table

