web/book/tests/documentation/snapshots/documentation__book__language-features__strings__4.snap
---
source: web/book/tests/documentation/book.rs
expression: "from my_table\nselect x = \"\"\"\"\"I said \"\"\"hello world\"\"\"!\"\"\"\"\"\n"
---
SELECT
  'I said """hello world"""!' AS x
FROM
  my_table

