web/book/tests/documentation/snapshots/documentation__book__language-features__strings__5.snap
---
source: web/book/tests/documentation/book.rs
expression: "from my_table\nselect x = \"\\t\\tline ends here\\n \\\\ \"\n"
---
SELECT
  '		line ends here
 \ ' AS x
FROM
  my_table

